--- a/app/package.json
+++ b/app/package.json
@@ -3,19 +3,14 @@
   "private": true,
   "scripts": {
     "start": "cross-env METEOR_NO_RELEASE_CHECK=1 meteor --settings ../config/settings.development.json",
-    "lint": "eslint --quiet --ext .jsx --ext .js ./imports",
-    "pretest": "npm run lint",
-    "test": "cross-env METEOR_NO_RELEASE_CHECK=1 meteor test --once --driver-package meteortesting:mocha --port 3100",
-    "test-no-lint": "cross-env METEOR_NO_RELEASE_CHECK=1 meteor test --once --driver-package meteortesting:mocha --port 3100",
-    "test-app": "cross-env METEOR_NO_RELEASE_CHECK=1 TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha --port 3100",
-    "visualize": "meteor --production --extra-packages bundle-visualizer"
+    "lint": "eslint --quiet --ext .jsx --ext .js ./imports"
   },
   "dependencies": {
-    "@babel/runtime": "^7.10.2",
+    "@babel/runtime": "^7.10.4",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
-    "graphql": "^15.1.0",
+    "graphql": "^15.2.0",
     "meteor-node-stubs": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
@@ -25,7 +20,7 @@
     "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "simpl-schema": "^1.7.3",
+    "simpl-schema": "^1.8.0",
     "sweetalert": "^2.1.2",
     "uniforms": "^3.0.0-alpha.5",
     "uniforms-bridge-simple-schema-2": "^3.0.0-alpha.5",
@@ -41,19 +36,13 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-import": "^2.21.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-meteor": "^7.0.0",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "eslint-utils": "^2.0.0",
-    "faker": "^4.1.0",
-    "fast-check": "^1.24.2",
-    "puppeteer": "^3.3.0",
-    "sinon": "^9.0.2"
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.5",
+    "eslint-utils": "^2.1.0"
   }
 }
