--- a/app/package.json
+++ b/app/package.json
@@ -6,11 +6,11 @@
     "lint": "eslint --quiet --ext .jsx --ext .js ./imports"
   },
   "dependencies": {
-    "@babel/runtime": "^7.10.4",
+    "@babel/runtime": "^7.10.5",
     "classnames": "^2.2.6",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
-    "graphql": "^15.2.0",
+    "graphql": "^15.3.0",
     "meteor-node-stubs": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
@@ -20,11 +20,11 @@
     "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "simpl-schema": "^1.8.0",
+    "simpl-schema": "^1.9.0",
     "sweetalert": "^2.1.2",
-    "uniforms": "^3.0.0-alpha.5",
-    "uniforms-bridge-simple-schema-2": "^3.0.0-alpha.5",
-    "uniforms-semantic": "^3.0.0-alpha.5"
+    "uniforms": "^3.0.0-rc.1",
+    "uniforms-bridge-simple-schema-2": "^3.0.0-rc.1",
+    "uniforms-semantic": "^3.0.0-rc.1"
   },
   "meteor": {
     "mainModule": {
@@ -36,13 +36,13 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
-    "eslint": "^7.3.1",
+    "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-meteor": "^7.0.0",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.5",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-utils": "^2.1.0"
   }
 }
